stderr
JudgeMan.java:12: error: non-static method pairJudge(String[]) cannot be referenced from a static context
        String ans = pairJudge(hand);
                     ^
1 error
